Fix path display for short paths tha get too long.

--- a/app/assets/stylesheets/external/vcwiz.scss
+++ b/app/assets/stylesheets/external/vcwiz.scss
@@ -1854,7 +1854,7 @@ mark.highlighter {
   .interactions {
     font-weight: bold;
 
-    span:last-child {
+    & > span:last-child {
       display: inline-block;
       margin-bottom: 1em;
     }
